criando arquivos css e atualizando index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Calculadora</h1>
+    <header class="menu">
+        <div class="container">
+            <a href="#" class="container__link"><img src="imagens/calculadora.svg" alt="icone de calculadora" class="container__imagem"><p class="container__legenda">calculadora</p></a>
+            <a href="#" class="container__link"><img src="imagens/balanca.svg" alt="icone de balança" class="container__imagem"><p class="container__legenda">imd</p></a>
+            <a href="#" class="container__link"><img src="imagens/conversor.svg" alt="icone de conversão" class="container__imagem"><p class="container__legenda">conversor</p></a>
+        </div>
+    </header>
     
 </body>
 </html>
